Colaboratory を使用して作成しました

--- a/00_動作確認用.ipynb
+++ b/00_動作確認用.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "表データサンプルreserve.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMxlgQ81tTvFYp+iEfWTEFm",
+      "authorship_tag": "ABX9TyPLSrYwS6iXD1AeCj45Kc0q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "import matplotlib.pyplot as plt\n",
         "import urllib.request "
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -61,6 +61,18 @@
       "source": [
         "## web上のデータを読みこみ，自分のgoogle clabo のドライブ上に保存します"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "60PtN1qeQXbV"
+      },
+      "source": [
+        "url = \"https://raw.githubusercontent.com/ghmagazine/awesomebook/master/data/reserve.csv\"\n",
+        "urllib.request.urlretrieve(url, 'reserve.csv') "
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -79,7 +91,7 @@
       "source": [
         "df= pd.read_csv(\"reserve.csv\")"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
