Colaboratory を使用して作成しました

--- a/03_02_データ構造2.ipynb
+++ b/03_02_データ構造2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03-02_データ構造2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNR0gWTWWNseYtndOYhWunC",
+      "authorship_tag": "ABX9TyNfmfVc6ReLNaYK4XKXMP40",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,12 +43,12 @@
         "id": "UDbFnO_pfzA8"
       },
       "source": [
-        "import pandas as pd\n",
+        "import pandas as pd # pandas 表データ処理では大変便利なモジュールです\n",
         "import numpy as np\n",
-        "import urllib.request \n",
-        "import matplotlib.pyplot as plt"
+        "import urllib.request # webからデータを読みこむ際につかいます\n",
+        "import matplotlib.pyplot as plt #グラフの描画に使うモジュールです"
       ],
-      "execution_count": 22,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -57,20 +57,48 @@
         "id": "hNrl75_ggnW2"
       },
       "source": [
-        "## データの読み込み"
+        "## データの読み込み\n",
+        "webから直接データを読みこむこともできますが，ここではいったんgoogle colabのドライブに保存してから使います"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3YjayxhRJG1z"
+        "id": "3YjayxhRJG1z",
+        "outputId": "120980a6-9f0c-4ff8-b839-bdad8304625a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "url = \"https://raw.githubusercontent.com/pcsanwald/kaggle-titanic/master/train.csv\" #kaggleのタイタニックの乗客データ\n",
-        "urllib.request.urlretrieve(url, 'titanic.csv') # titanicという名前で google colabのドライブに保存します\n",
+        "urllib.request.urlretrieve(url, 'titanic.csv') # titanicという名前で google colabのドライブに保存します"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "('titanic.csv', <http.client.HTTPMessage at 0x7f276b5d07d0>)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Vowco9VrJm0"
+      },
+      "source": [
         "df = pd.read_csv('titanic.csv') # pandasのデータフレームに読みこみます"
       ],
-      "execution_count": 10,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -87,15 +115,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 422
+          "height": 487
         },
         "id": "m125aAjWgkcI",
-        "outputId": "47a3cc70-9c92-4d04-fb8f-3c89358f8f7f"
+        "outputId": "a3ccebf3-c8b8-4983-dfd0-631dde47a3d5"
       },
       "source": [
         "df"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -312,7 +340,43 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tdvKT-vmx3LT",
+        "outputId": "708e8574-2771-4464-8888-cf4644780c15",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(df) #print文でも出力しますが，フォーマットがかわります"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "     survived  pclass  ... cabin embarked\n",
+            "0           0       3  ...   NaN        S\n",
+            "1           1       1  ...   C85        C\n",
+            "2           1       3  ...   NaN        S\n",
+            "3           1       1  ...  C123        S\n",
+            "4           0       3  ...   NaN        S\n",
+            "..        ...     ...  ...   ...      ...\n",
+            "886         0       2  ...   NaN        S\n",
+            "887         1       1  ...   B42        S\n",
+            "888         0       3  ...   NaN        S\n",
+            "889         1       1  ...  C148        C\n",
+            "890         0       3  ...   NaN        Q\n",
+            "\n",
+            "[891 rows x 11 columns]\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -332,12 +396,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "t_qJzsdVgy5g",
-        "outputId": "f1da9466-ce5d-4c3f-dfb7-39da8fbf186b"
+        "outputId": "f7711f6b-7eea-498a-8e82-d1a87ee7fe53"
       },
       "source": [
         "df.columns"
       ],
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -351,7 +415,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 10
         }
       ]
     },
@@ -361,7 +425,8 @@
         "id": "URm9vOC3hacS"
       },
       "source": [
-        "## 各カラムの変数の型を知りたいとときは　df.dtypesをみてみます"
+        "## 各カラムの変数の型を知りたいとときは　df.dtypesをみてみます\n",
+        "型は pandasがcsvを読みこむときに自動できまりますが，必ずしも思っているような型になっていないことがあります。その場合は後から型を変える必要があります"
       ]
     },
     {
@@ -376,7 +441,7 @@
       "source": [
         "df.dtypes"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -411,7 +476,7 @@
       "source": [
         "## データの全体的な統計量を簡単に把握するには df.describe()を実行します\n",
         "describeでわかることは数値データです。カテゴリカルなデータは計算から省かれます\n",
-        "describeでもかなりのことがわかりますが，より詳細な分析は後からでてくるprofileをつかいます"
+        "describeでもかなりのことがわかりますが，より詳細な分析は04-04で扱うprofileをつかいます"
       ]
     },
     {
@@ -419,15 +484,15 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 300
+          "height": 297
         },
         "id": "e1nIDrJNg8ok",
-        "outputId": "8962c625-f9a8-433b-ec9d-d14d8a800b6f"
+        "outputId": "abd9c09b-3547-4fd5-c732-51cb4db35ef7"
       },
       "source": [
         "df.describe()"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -551,7 +616,56 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vw0m2e-2zjQU"
+      },
+      "source": [
+        "## info で，欠損値の数を調べられます"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "trv1J8c4zKWE",
+        "outputId": "223c308b-b4ea-4b50-844e-2dc94911ba3d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "df.info()"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 891 entries, 0 to 890\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column    Non-Null Count  Dtype  \n",
+            "---  ------    --------------  -----  \n",
+            " 0   survived  891 non-null    int64  \n",
+            " 1   pclass    891 non-null    int64  \n",
+            " 2   name      891 non-null    object \n",
+            " 3   sex       891 non-null    object \n",
+            " 4   age       714 non-null    float64\n",
+            " 5   sibsp     891 non-null    int64  \n",
+            " 6   parch     891 non-null    int64  \n",
+            " 7   ticket    891 non-null    object \n",
+            " 8   fare      891 non-null    float64\n",
+            " 9   cabin     204 non-null    object \n",
+            " 10  embarked  889 non-null    object \n",
+            "dtypes: float64(2), int64(4), object(5)\n",
+            "memory usage: 76.7+ KB\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -572,12 +686,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XoQY64w-hDou",
-        "outputId": "6be5871c-b157-4de8-8627-74a6f7595f4a"
+        "outputId": "87d369e9-7f21-4fe6-e549-0591d7d4faca"
       },
       "source": [
         "df[\"cabin\"].unique()"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -606,8 +720,17 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 18
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qxISlItR0A5a"
+      },
+      "source": [
+        "## 例えば　属性cabinのユニークなラベルの数を調べたいときは lenで評価します"
       ]
     },
     {
@@ -617,7 +740,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ey7I6_RYixBZ",
-        "outputId": "1537c473-8b52-4174-c508-4bdae1dff670"
+        "outputId": "ca45d3da-5c2d-4087-c9ca-7a4b5f405b2e"
       },
       "source": [
         "len(df[\"cabin\"].unique())"
@@ -655,13 +778,13 @@
           "height": 265
         },
         "id": "zSsQeXFvjXKO",
-        "outputId": "b02512f3-cbfb-453b-93be-ce373ceeb589"
+        "outputId": "8877bdf5-7dba-42a3-ce72-3648266896d6"
       },
       "source": [
-        "plt.hist(df[\"age\"],bins=20)\n",
+        "plt.hist(df[\"age\"],bins=20) # binの数を20にしています　\n",
         "plt.show()"
       ],
-      "execution_count": 26,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "display_data",
@@ -684,7 +807,7 @@
         "id": "BE7gS2NGjZaR"
       },
       "source": [
-        "ここでは　pandas や　numpy の詳しい使い方は扱いませんが，大変多くの機能があり大概のことはpandas とnumpyで済ませることができます。"
+        "ここでは　pandas や　numpy の詳しい使い方は扱いませんが，大変多くの機能があり大概のことはpandas とnumpyで済ませることができます。使いこなすとpandasだけでほとんどのことができるはずです。\n"
       ]
     },
     {
