Colaboratory を使用して作成しました

--- a/04_04_pandas_Profiling_の例（タイタニック）.ipynb
+++ b/04_04_pandas_Profiling_の例（タイタニック）.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-04_pandas Profiling の例（タイタニック）.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNi53vKI9U50itw6ZMBWWRj",
+      "authorship_tag": "ABX9TyM2mYFy5ibrWYfALsJrygcc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,8 +73,7 @@
       "source": [
         "import pandas as pd\n",
         "import pandas_profiling as pdp\n",
-        "import numpy as np\n",
-        "import urllib.request "
+        "import numpy as np"
       ],
       "execution_count": 4,
       "outputs": []
