Colaboratory を使用して作成しました

--- a/00_動作確認用.ipynb
+++ b/00_動作確認用.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "表データサンプルreserve.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLSrYwS6iXD1AeCj45Kc0q",
+      "authorship_tag": "ABX9TyPMOYC/poXxAkgNz7rekvSU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,8 @@
         "import numpy as np\n",
         "from PIL import Image\n",
         "import matplotlib.pyplot as plt\n",
-        "import urllib.request "
+        "import urllib.request \n",
+        "%matplotlib inline"
       ],
       "execution_count": null,
       "outputs": []
