--- a/03_01_データ構造1.ipynb
+++ b/03_01_データ構造1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03-01_データ構造1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOLaAGKnxHRs2rAseHgitfO",
+      "authorship_tag": "ABX9TyPa5QmUe5qI7xGgqEXvKA2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,9 +61,10 @@
         "import numpy as np\n",
         "from  anytree import *\n",
         "import networkx as nx\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +135,7 @@
         "jan  = Node( \"Jan\",  parent=dan )\n",
         "joe  = Node( \"Joe\",  parent=dan )"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +168,7 @@
         "sg= nx.Graph() #空の無向グラム\n",
         "dg = nx.DiGraph() #空の有向グラフ"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -181,7 +182,7 @@
         "sg.add_edge(1, 2)                                    \n",
         "sg.add_edges_from([(1, 3), (2, 5), (3, 4), (4, 5),(5,3)])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
