Colaboratory を使用して作成しました

--- a/03_02_データ構造2.ipynb
+++ b/03_02_データ構造2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03-02_データ構造2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfmfVc6ReLNaYK4XKXMP40",
+      "authorship_tag": "ABX9TyNzFDtxe4cMsYvJnhk9bkEy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,7 +46,8 @@
         "import pandas as pd # pandas 表データ処理では大変便利なモジュールです\n",
         "import numpy as np\n",
         "import urllib.request # webからデータを読みこむ際につかいます\n",
-        "import matplotlib.pyplot as plt #グラフの描画に使うモジュールです"
+        "import matplotlib.pyplot as plt #グラフの描画に使うモジュールです\n",
+        "%matplotlib inline"
       ],
       "execution_count": null,
       "outputs": []
