Colaboratory を使用して作成しました

--- a/03_03_画像と系列データ.ipynb
+++ b/03_03_画像と系列データ.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "03-03_画像と系列データ.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNMrzOUwQ2CHGNJqWFIYmuT",
+      "authorship_tag": "ABX9TyM9+y4HMVfx/LX1zLe929CI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +48,10 @@
         "import numpy as np\n",
         "from PIL import Image #画像を扱うモジュールはいくつかありますが最も基本的なpython image library(PIL)を例にあげます\n",
         "import matplotlib.pyplot as plt\n",
-        "import urllib.request "
+        "import urllib.request \n",
+        "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -82,7 +83,7 @@
       "source": [
         "img= Image.open(\"yokohama.jpg\")  # PIL(Python Image Library)で読みこみます"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -172,7 +173,7 @@
         "B = img_array[:, :, 2] # B　2ならばBチャネル　\n",
         "# ただし，PILでない別の画像処理モジュールだと別の並びになっていることがあるので注意です。"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +214,7 @@
       "source": [
         "img_gray = 0.299 * img_array[:, :, 0] + 0.587 * img_array[:, :, 1] + 0.114 * img_array[:, :, 2] #視覚的に正しいグレイスケール化(1:1:1ではないです)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +320,7 @@
       "source": [
         ""
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -407,7 +408,7 @@
         "osaka_df = df[df[\"Prefecture\"] == \"Osaka\"] # Oaka だけのデータ\n",
         "kanagawa_df= df[df[\"Prefecture\"] == \"Kanagawa\"] # Kanagawa だけのデータ"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,7 +500,7 @@
       "source": [
         ""
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     }
   ]
