Colaboratory を使用して作成しました

--- a/04_06_エンコードと正規化の例.ipynb
+++ b/04_06_エンコードと正規化の例.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-06_エンコードと正規化の例.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOB0LiSuanfG7PQ2DK7518K",
+      "authorship_tag": "ABX9TyNidiZlzlusn0bmZeTPDE5H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,9 +56,10 @@
         "import numpy as np\n",
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
-        "sns.set_style(\"whitegrid\")"
+        "sns.set_style(\"whitegrid\")\n",
+        "%matplotlib inline"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -201,7 +202,7 @@
       "source": [
         "from sklearn.preprocessing import LabelEncoder # ラベルエンコーダを試す"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
