Colaboratory を使用して作成しました

--- a/04_07_スケーリング.ipynb
+++ b/04_07_スケーリング.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "04-07_スケーリング.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNHjIK6Flhifgq1QakKH99E",
+      "authorship_tag": "ABX9TyPV1b9UIzFLOYUnr49y9YSk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,7 +237,7 @@
         "id": "5BRxAjPDq2ek"
       },
       "source": [
-        "標準化(minmaxscaler)"
+        "正規化(minmaxscaler)"
       ]
     },
     {
